--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>Grafff</title>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <%= javascript_include_tag "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" %>
+  <%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-resource.min.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
