Add base tag to application.html.erb. Add corresponding routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html ng-app="grafffApp">
 <head>
   <title>Grafff</title>
+  <base href="/test/">
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
