Add local angular and bootstrap files, remove script tags. Add Devise authentication links to application.html.erb

--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -2,12 +2,12 @@ var app = angular.module('grafffApp', ['ngAnimate', 'ngRoute', 'ngResource']);
 
 app.config(function($routeProvider, $locationProvider){
 
-  $routeProvider.
-  when('/home', {
+  $routeProvider
+  .when('/home', {
     controller: 'HomeController',
     templateUrl: "<%= asset_path('home.html') %>"
-  }).
-  otherwise({
+  })
+  .otherwise({
     redirectTo: '/home'
   });
 
