--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -1,4 +1,8 @@
-var app = angular.module('grafffApp', ['ngAnimate', 'ngRoute', 'ngResource']);
+var app = angular.module('grafffApp', [
+  'ngAnimate',
+  'ngRoute',
+  'ngResource'
+]);
 
 app.config(function($routeProvider, $locationProvider){
 
