Add change conditionals to show correct angular/rails views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,11 @@
     <%= yield %>
   <% end %>
    
-  <% if user_signed_in? %>
+  <% if current_page? edit_user_registration_path %>
     <%= yield %>
+  <% end %>
+
+  <% if user_signed_in? %>
     <ng-view></ng-view>
   <% end %>
 
