Move third-party files to vendor directory

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html ng-app="grafffApp">
 <head>
   <title>Grafff</title>
-  <base href="/test/">
+  <base href="/#/">
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %>  
   <%= csrf_meta_tags %>
