Tweak routing from rails/devise views to angular app

--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -4,17 +4,15 @@ var app = angular.module('grafffApp', [
   'ngResource'
 ]);
 
-app.config(function($routeProvider, $locationProvider){
+app.config(function($routeProvider){
 
   $routeProvider
-  .when('/home', {
+  .when('/', {
     controller: 'HomeController',
     templateUrl: "<%= asset_path('home.html') %>"
   })
   .otherwise({
-    redirectTo: '/home'
+    redirectTo: '/'
   });
-
-  $locationProvider.html5Mode(true);
 
 }); 
