--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -9,7 +9,11 @@ app.config(function($routeProvider){
   $routeProvider
   .when('/', {
     controller: 'HomeController',
-    templateUrl: "<%= asset_path('home.html') %>"
+    templateUrl: "<%= asset_path('index.html') %>"
+  })
+  .when('/second-page', {
+    controller: 'HomeController',
+    templateUrl: "<%= asset_path('second-page.html') %>"
   })
   .otherwise({
     redirectTo: '/'
