Point Devise to registrations controller

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", :class => 'button radius' %>
+    <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
