--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -11,7 +11,7 @@ app.config(function($routeProvider){
     controller: 'HomeController',
     templateUrl: "<%= asset_path('index.html') %>"
   })
-  .when('/users/show', {
+  .when('/users/profile', {
     controller: 'UserController',
     templateUrl: "<%= asset_path('user-profile.html') %>"
   })
@@ -19,4 +19,4 @@ app.config(function($routeProvider){
     redirectTo: '/'
   });
 
-}); 
+});
