Display artworks that a user has 'liked'

--- a/app/assets/templates/user-profile.html
+++ b/app/assets/templates/user-profile.html
@@ -1,1 +1,7 @@
 <h3>{{ currentUser.first_name }} {{ currentUser.last_name }}</h3>
+
+<h4>About me:</h4>
+<p>{{ currentUser.bio }}</p>
+
+<h4>My Likes:</h4>
+<p ng-repeat="artwork in currentUserArtworks">{{ artwork.title }}</p>
