--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,1 +1,7 @@
 <p>This is index.html.erb</p>
+
+<ul>
+  <% @users.each do |user| %>
+    <li><%= link_to user.first_name, "#/user/#{user.id}"%></li>
+  <% end %>
+</ul>
