Revert back to original root route. Put simple log in/register prompt on landing page

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,7 +1,1 @@
-<p>This is index.html.erb</p>
-
-<ul>
-  <% @users.each do |user| %>
-    <li><%= link_to user.first_name, "#/user/#{user.id}"%></li>
-  <% end %>
-</ul>
+<p>Welcome to Grafff! Please log in or register to continue.</p>
