--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -5,5 +5,5 @@
 <p ng-if="currentUser"><a ng-href="#/users/{{ currentUser.id }}/profile">View my profile</a></p>
 
 <ul>
-  <li ng-repeat="user in allUsers | orderBy: 'id'"><a ng-href="#/users/{{ user.id }}/profile">{{ user.first_name }}</a></li>
+  <li ng-repeat="user in allUsers"><a ng-href="#/users/{{ user.id }}/profile">{{ user.first_name }}</a></li>
 </ul>
