Add basic structure for profile body. Add nav tabs for profile body

--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,6 +1,6 @@
 <p>This is the Angular index.html view</p>
 
-<p>This page will display the main map, showing all artworks</p>
+<p>This page will display the main map, showing all artworks, artists, latest postings, most popular postings etc</p>
 
 <p ng-if="currentUser"><a ng-href="#/users/{{ currentUser.id }}/profile">View my profile</a></p>
 
