--- a/app/assets/templates/user-profile.html
+++ b/app/assets/templates/user-profile.html
@@ -22,24 +22,23 @@
       <li><a href ng-click="$parent.tab = 4">Artworks</a></li>
       <li><a href ng-click="$parent.tab = 5">Map</a></li>
     </ul>
-    {{ tab }}
   </div>
   
   <div><!-- Content -->
-    <div><!-- Likes -->
-      
+    <div ng-show="tab === 1"><!-- Likes -->
+      <p>Likes</p>
     </div>
-    <div><!-- Artists -->
-      
+    <div ng-show="tab === 2"><!-- Artists -->
+      <p>Artists</p>
     </div>
-    <div><!-- Activity Feed -->
-      
+    <div ng-show="tab === 3"><!-- Activity Feed -->
+      <p>Activity feed</p>
     </div>
-    <div><!-- Artworks -->
-      
+    <div ng-show="tab === 4"><!-- Artworks -->
+      <p>Artworks</p>
     </div>
-    <div><!-- Map -->
-      
+    <div ng-show="tab === 5"><!-- Map -->
+      <p>Map</p>
     </div>
   </div>
 </div>
