--- a/app/assets/templates/user-profile.html
+++ b/app/assets/templates/user-profile.html
@@ -14,13 +14,23 @@
 <div><!-- Profile body -->
   <div><!-- Nav -->
     <ul class="nav nav-pills" ng-if="!user.is_artist" ng-init="$parent.tab = 1"><!-- Nav pills -->
-      <li><a href ng-click="$parent.tab = 1">Likes</a></li>
-      <li><a href ng-click="$parent.tab = 2">Artists</a></li>
-      <li><a href ng-click="$parent.tab = 3">Activity Feed</a></li>
+      <li ng-class="{ active:tab === 1 }">
+        <a href ng-click="$parent.tab = 1">Likes</a>
+      </li>
+      <li ng-class="{ active:tab === 2 }">
+        <a href ng-click="$parent.tab = 2">Artists</a>
+      </li>
+      <li ng-class="{ active:tab === 3 }">
+        <a href ng-click="$parent.tab = 3">Activity Feed</a>
+      </li>
     </ul>
     <ul class="nav nav-pills" ng-if="user.is_artist" ng-init="$parent.tab = 4"><!-- Nav pills -->
-      <li><a href ng-click="$parent.tab = 4">Artworks</a></li>
-      <li><a href ng-click="$parent.tab = 5">Map</a></li>
+      <li ng-class="{ active:tab === 4 }">
+        <a href ng-click="$parent.tab = 4">Artworks</a>
+      </li>
+      <li ng-class="{ active:tab === 5 }">
+        <a href ng-click="$parent.tab = 5">Map</a>
+      </li>
     </ul>
   </div>
   
