--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -11,43 +11,43 @@
   </div>
 </div>
 
-<div><!-- Profile body -->
+<div ng-controller="ProfileController"><!-- Profile body -->
   <div><!-- Nav -->
     <ul class="nav nav-pills" ng-if="!user.is_artist" ng-init="$parent.tab = 1"><!-- Nav pills -->
-      <li ng-class="{ active:tab === 1 }">
-        <a href ng-click="$parent.tab = 1">Likes</a>
+      <li ng-class="{ active:isSelected(1) }">
+        <a href ng-click="$parent.selectTab(1)">Likes</a>
       </li>
-      <li ng-class="{ active:tab === 2 }">
-        <a href ng-click="$parent.tab = 2">Artists</a>
+      <li ng-class="{ active:isSelected(2) }">
+        <a href ng-click="$parent.selectTab(2)">Artists</a>
       </li>
-      <li ng-class="{ active:tab === 3 }">
-        <a href ng-click="$parent.tab = 3">Activity Feed</a>
+      <li ng-class="{ active:isSelected(3) }">
+        <a href ng-click="$parent.selectTab(3)">Activity Feed</a>
       </li>
     </ul>
     <ul class="nav nav-pills" ng-if="user.is_artist" ng-init="$parent.tab = 4"><!-- Nav pills -->
-      <li ng-class="{ active:tab === 4 }">
-        <a href ng-click="$parent.tab = 4">Artworks</a>
+      <li ng-class="{ active:isSelected(4) }">
+        <a href ng-click="$parent.selectTab(4)">Artworks</a>
       </li>
-      <li ng-class="{ active:tab === 5 }">
-        <a href ng-click="$parent.tab = 5">Map</a>
+      <li ng-class="{ active:isSelected(5) }">
+        <a href ng-click="$parent.selectTab(5)">Map</a>
       </li>
     </ul>
   </div>
   
   <div><!-- Content -->
-    <div ng-show="tab === 1"><!-- Likes -->
+    <div ng-show="isSelected(1)"><!-- Likes -->
       <p>Likes</p>
     </div>
-    <div ng-show="tab === 2"><!-- Artists -->
+    <div ng-show="isSelected(2)"><!-- Artists -->
       <p>Artists</p>
     </div>
-    <div ng-show="tab === 3"><!-- Activity Feed -->
+    <div ng-show="isSelected(3)"><!-- Activity Feed -->
       <p>Activity feed</p>
     </div>
-    <div ng-show="tab === 4"><!-- Artworks -->
+    <div ng-show="isSelected(4)"><!-- Artworks -->
       <p>Artworks</p>
     </div>
-    <div ng-show="tab === 5"><!-- Map -->
+    <div ng-show="isSelected(5)"><!-- Map -->
       <p>Map</p>
     </div>
   </div>
