--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -38,8 +38,8 @@
     <div ng-show="isSelected(1)"><!-- Activity Feed -->
       <p>Activity Feed</p>
     </div>
-    <div ng-show="isSelected(2)"><!-- Likes -->
-      <p ng-repeat="artwork in userLikedArtwork">{{ artwork.title }}<br>{{ artwork.description }}<br>{{ artwork }}</p>
+    <div ng-show="isSelected(2)" ng-controller="ArtworkController"><!-- Likes -->
+      <p ng-repeat="artwork in userLikedArtwork">{{ artwork.title }}<br>{{ artwork.description }}<br>{{ artwork.likes.length }}<br>{{  artwork.comments.length }}</p>
     </div>
     <div ng-show="isSelected(3)"><!-- Artists -->
       <p>Artists</p>
