--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -39,7 +39,9 @@
       <p>Activity Feed</p>
     </div>
     <div ng-show="isSelected(2)" ng-controller="ArtworkController"><!-- Likes -->
-      <p ng-repeat="artwork in userLikedArtwork">{{ artwork.title }}<br>{{ artwork.description }}<br>{{ artwork.likes.length }}<br>{{  artwork.comments.length }}</p>
+      <p ng-repeat="artist in likedArtworkArtists">{{ artist.first_name }}</p>
+      <p ng-repeat="artwork in userLikedArtwork">{{ artwork.title }}</p>
+      
     </div>
     <div ng-show="isSelected(3)"><!-- Artists -->
       <p>Artists</p>
