--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -39,7 +39,7 @@
       <p>Activity Feed</p>
     </div>
     <div ng-show="isSelected(2)"><!-- Likes -->
-      <div ng-repeat="artwork in likedArtwork"><!-- Artwork card -->
+      <div ng-repeat="artwork in likedArtworks"><!-- Artwork card -->
         <img src="http://lorempixel.com/150/100/abstract">
         <h4>{{ artwork.title }}</h4>
         <ul>
@@ -51,14 +51,22 @@
       </div>
     </div>
     <div ng-show="isSelected(3)"><!-- Artists -->
-      <div ng-repeat="artist in followedArtists"><!-- Artwork card -->
+      <div ng-repeat="artist in followedArtists"><!-- Artist card -->
         <img src="http://lorempixel.com/150/100/abstract">
         <h4>{{ artist.username }}</h4>
         <p>{{ artist.bio }}</p>
       </div>
     </div>
     <div ng-show="isSelected(4)"><!-- Artworks -->
-      <p>Artworks</p>
+      <div ng-repeat="artwork in userArtworks"><!-- Artwork card -->
+        <img src="http://lorempixel.com/150/100/abstract">
+        <h4>{{ artwork.title }}</h4>
+        <ul>
+          <li>Description: {{ artwork.description }}</li>
+          <li>Likes: {{ artwork.likes.length }}</li>
+          <li>Comments: {{ artwork.comments.length }}</li>
+        </ul>
+      </div>
     </div>
     <div ng-show="isSelected(5)"><!-- Map -->
       <p>Map</p>
