Tidy relationship-controller.js. Add 'unfollow' button to profile view

--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -14,6 +14,10 @@
         <button>Follow</button>
       </form>
 
+      <form ng-submit="unfollowUser()" novalidate>
+        <button>Unfollow</button>
+      </form>
+
     </div>
 
   </div>
