--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -9,12 +9,12 @@
     <p ng-if="!user.is_artist">{{ user.active_relationships.length }} Following</p>
 
     <div ng-controller="RelationshipController" ng-if="user.is_artist">
-      
+      {{ user.passive_relationships }}
       <form ng-submit="followUser(currentUser.id, user.id)" novalidate>
         <button>Follow</button>
       </form>
 
-      <form ng-submit="unfollowUser()" novalidate>
+      <form ng-submit="unfollowUser(currentUser.id)" novalidate>
         <button>Unfollow</button>
       </form>
 
