--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -64,11 +64,15 @@
       </div>
     </div>
     <div ng-show="isSelected(3)"><!-- Artists -->
-      <div ng-repeat="artist in followedArtists"><!-- Artist card -->
-        <img src="http://lorempixel.com/150/100/abstract">
-        <h4>{{ artist.username }}</h4>
-        <p>{{ artist.bio }}</p>
-      </div>
+        <div ng-repeat="artist in followedArtists"><!-- Artist card -->
+          <a ng-href="#/users/{{ artist.id }}/profile">
+            <div><!-- Card wrapper -->
+              <img src="http://lorempixel.com/150/100/abstract">
+              <h4>{{ artist.username }}</h4>
+              <p>{{ artist.bio }}</p>
+            </div>
+          </a>
+        </div>
     </div>
     <div ng-show="isSelected(4)"><!-- Artworks -->
       <div ng-repeat="artwork in userArtworks"><!-- Artwork card -->
