--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -15,6 +15,10 @@ app.config(function($routeProvider){
     controller: 'UserController',
     templateUrl: "<%= asset_path('views/user-profile.html') %>"
   })
+  .when('/artworks/:id', {
+    controller: 'ArtworkController',
+    templateUrl: "<%= asset_path('views/artwork.html') %>"
+  })
   .otherwise({
     redirectTo: '/'
   });
