--- a/app/assets/templates/views/artwork.html
+++ b/app/assets/templates/views/artwork.html
@@ -17,8 +17,8 @@
 <div ng-controller="CommentController"><!-- Comments -->
   <h4>Comments: ({{ artwork.comments.length }})</h4>
   <div><!-- Comment field -->
-    <form name="commentField" ng-keypress="($event.which === 13) ? postComment(comment) : 0">
-      <textarea cols="30" rows="2" ng-model="comment.content" ></textarea>
+    <form ng-keypress="($event.which === 13) ? postComment(comment) : 0">
+      <textarea name="commentField" cols="30" rows="2" ng-model="comment.content" ></textarea>
     </form>
   </div>
   <div ng-repeat="comment in comments">
