--- a/app/assets/templates/views/artwork.html
+++ b/app/assets/templates/views/artwork.html
@@ -23,7 +23,7 @@
   </div>
   <div ng-repeat="comment in comments | orderBy: '-created_at'">
     <div><!-- Individual comment -->
-      <p>{{ comment.content }}</p>
+      <blockquote>{{ comment.content }}</blockquote>
       <p>By: {{ comment.user.username }}, {{ comment.created_at }}</p>
     </div>
   </div>
