Add initial 'like' button to artwork view. Create like-controller.js

--- a/app/assets/templates/views/artwork.html
+++ b/app/assets/templates/views/artwork.html
@@ -11,6 +11,7 @@
     <p>{{ artwork.description }}</p>
   </div>
   <div><!-- Aside: Map, likes, address -->
+    <button>Like</button>
     <p>Likes: {{ artwork.likes.length }}</p>
   </div>
 </div>
