Unlike an artwork, update value shown on page

--- a/app/assets/templates/views/artwork.html
+++ b/app/assets/templates/views/artwork.html
@@ -13,6 +13,7 @@
   <div><!-- Aside: Map, likes, address -->
     <div ng-controller="LikeController">
       <button ng-click="likeArtwork(currentUser.id, artwork.id)">Like</button>
+      <button ng-click="unlikeArtwork(currentUser.id)">Unlike</button>
     </div>
     <p>Likes: {{ artwork.likes.length }}</p>
   </div>
