Switch between like/unlike button on click

--- a/app/assets/templates/views/artwork.html
+++ b/app/assets/templates/views/artwork.html
@@ -12,8 +12,8 @@
   </div>
   <div><!-- Aside: Map, likes, address -->
     <div ng-controller="LikeController">
-      <button ng-click="likeArtwork(currentUser.id, artwork.id)">Like</button>
-      <button ng-click="unlikeArtwork(currentUser.id)">Unlike</button>
+      <button ng-hide="likeThisArtwork" ng-click="likeArtwork(currentUser.id, artwork.id)">Like</button>
+      <button ng-show="likeThisArtwork" ng-click="unlikeArtwork(currentUser.id)">Unlike</button>
     </div>
     <p>Likes: {{ artwork.likes.length }}</p>
   </div>
