--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -44,6 +44,9 @@
       <li ng-class="{ active:isSelected(5) }">
         <a href ng-click="$parent.selectTab(5)">Map</a>
       </li>
+      <li ng-if="currentUser.id === user.id" ng-class="{ active:isSelected(6) }">
+        <a href ng-click="$parent.selectTab(6)">Add Artwork</a>
+      </li>
     </ul>
   </div>
   
@@ -95,6 +98,9 @@
     </div>
     <div ng-show="isSelected(5)"><!-- Map -->
       <p>Map</p>
+    </div>
+    <div ng-show="isSelected(6)"><!-- Add artwork form -->
+      <p>Form goes here!</p>
     </div>
   </div>
 </div>
