--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html ng-app="grafffApp">
 <head>
   <title>Grafff</title>
-  <!-- <base href="/test/"> -->
   <%= stylesheet_link_tag 'application' %>
-  <%= javascript_include_tag 'application' %>  
+  <%= javascript_include_tag 'application' %>
+  <script src="http://maps.google.com/maps/api/js"></script>
   <%= csrf_meta_tags %>
 </head>
 
