Create artist's artwork map directive, map controller, basic map size/colour styling, display map on profile page

--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -1,7 +1,8 @@
 var app = angular.module('grafffApp', [
   'ngAnimate',
   'ngRoute',
-  'ngResource'
+  'ngResource',
+  'ngMap'
 ]);
 
 app.config(function($routeProvider){
@@ -35,6 +36,16 @@ app.directive('myProfileLink', function() {
         $scope.currentUser = response.data;
       });
     }
+  };
+
+});
+
+app.directive('artistArtworkMap', function() {
+  
+  return {
+    restrict: 'E',
+    templateUrl: "<%= asset_path('directives/artist-artwork-map.html') %>",
+    controller: 'MapController'
   };
 
 });
