--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -97,7 +97,7 @@
       </div>
     </div>
     <div ng-show="isSelected(5)"><!-- Map -->
-      <p>Map</p>
+      <artist-artwork-map></artist-artwork-map>
     </div>
     <div ng-show="isSelected(6)"><!-- Add artwork form -->
       <h3>Add new artwork</h3>
@@ -107,7 +107,7 @@
         <label for="description">Description</label>
         <textarea id="description"></textarea>
         <label for="location">Location</label>
-        <!-- Map with draggable markers to go here? -->
+        <!-- Map with draggable marker for setting location? -->
         <label for="images">Images</label>
         <!-- Multiple image upload functionality goes here? -->
         <button>Submit</button>
